--- a/homeworks/week4/hw3/index.html
+++ b/homeworks/week4/hw3/index.html
@@ -30,9 +30,9 @@
   <div class="container">
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="script/jquery_datefomat.js"></script>
-  <script src="script/main.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+  <!-- <script src="script/jquery_datefomat.js"></script> -->
+  <script src="script/nojquery.js"></script>
 
 </body>
 
