week4-3 use Fetch api. sorry for IE.

--- a/homeworks/week4/hw3/index.html
+++ b/homeworks/week4/hw3/index.html
@@ -32,7 +32,8 @@
 
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <!-- <script src="script/jquery_datefomat.js"></script> -->
-  <script src="script/xmlHttpRequest.js"></script>
+  <!-- <script src="script/xmlHttpRequest.js"></script> -->
+  <script src="script/fetch.js"></script>
 
 </body>
 
