twitch search game.

--- a/homeworks/week4/hw3/searchGame.html
+++ b/homeworks/week4/hw3/searchGame.html
@@ -9,20 +9,16 @@
 </head>
 <body>
   <section class="searchBox">
-    <h1>Search Games</h1>
+    <h1>Search Games (live stream now)</h1>
     <form action="">
       <input class="searchBox__ele" type="text" 
-             name="search" id="search" placeholder="Super Mario">
+             name="search" id="search" placeholder="A game you like">
       <button class="searchBox__ele" type="submit">Search</button>
     </form>
   </section>
 
 
   <div class="container">
-
-    
-    
-
   </div>
 
   <script src="./script/searchGame.js"></script>
