--- a/homeworks/week4/hw3/index.html
+++ b/homeworks/week4/hw3/index.html
@@ -1,40 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
-
-  <title>Twitch Live stream</title>
+  <link rel="stylesheet" href="./searchGame.css">
+  <title>Twitch search games</title>
 </head>
-
 <body>
-  <h1 class="gameTitle">
-  </h1>
+  <section class="searchBox">
+    <h1>Search Games (live stream now)</h1>
+    <form>
+      <input class="searchBox__ele" type="text" 
+             name="search" id="search" placeholder="A game you like">
+      <button class="searchBox__ele" type="submit">Search</button>
+    </form>
+  </section>
 
-  
-  
-<section class="selector" id="selector">
-      <label for="game-select">Choose a Game:</label>
-      
-      <select id="game-select">
-        <option value="">--Please choose an option--</option>
-        <option value="LOL">League of Legends</option>
-        <option value="SFV">Street Fighter V</option>
-        <option value="ZD">The Legend of Zelda :A Breath of the Wild</option>
-      </select>
-</section>
 
   <div class="container">
   </div>
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-  <!-- <script src="script/jquery_datefomat.js"></script> -->
-  <!-- <script src="script/xmlHttpRequest.js"></script> -->
-  <script src="script/fetch.js"></script>
-
+  <script src="./script/searchGame.js"></script>
 </body>
-
 </html>
